modified:   article/index.wiki

--- a/article/index.wiki
+++ b/article/index.wiki
@@ -1,15 +1,16 @@
 == 文摘目录 ==
 # [[011-05-09-data-types-xml|Data Type XML]]
 # [[2011-04-23-start-with-github-blog|Start With GitHub Blog]]
-2011-05-05-some-useful-commands.html	4.4 kB	10/18/11 1:46:04 AM
-2011-05-05-vi-encode.html	928 B	10/18/11 1:46:04 AM
-2011-05-09-data-types-and-json.html	6.8 kB	10/18/11 1:46:06 AM
-2011-05-12-regular-expressions-tutorial.html	30.9 kB	10/18/11 1:46:10 AM
-2011-07-18_zend_router_request_source.html	2.5 kB	10/18/11 1:46:14 AM
-2011-07-18-zend-router-and-request-source.html	11.6 kB	10/18/11 1:46:14 AM
-2011-07-21-ajax-not-crosse-domain.html	6.3 kB	10/18/11 1:46:16 AM
-2011-07-21-some-php-questions.html	2.5 kB	10/18/11 1:46:16 AM
-2011-08-15-china-rock-roll-music.html	11.8 kB	10/18/11 1:46:18 AM
-2011-08-31-Good-Programmers-Make-Bad-Designers.html	9.9 kB	10/18/11 1:46:20 AM
-2011-08-31-mysql-Optimization-tutorials.html	35.3 kB	10/18/11 1:46:30 AM
-2011-10-16-The-three-sentences-of-a-boss.html	16.9 kB	10/18/11 1:46:32 AM
+# [[2011-05-05-some-useful-commands|一些有用的命令]]
+# [[2011-05-05-vi-encode|Vi Encode]]
+# [[2011-05-09-data-types-and-json|JSON 和数据类型]]
+# [[2011-05-12-regular-expressions-tutorial|正则表达式简明教程]]
+# [[2011-07-18_zend_router_request_source|Zend FrameWork 路由器Request源码分析]]
+# [[2011-07-18-zend-router-and-request-source|Zend FrameWork Router 和 Request源码]]
+# [[2011-07-21-ajax-not-crosse-domain|ajax的跨域]]
+# [[2011-07-21-some-php-questions|几个php问题]]
+# [[2011-08-15-china-rock-roll-music|中国摇滚音乐]]
+# [[2011-08-31-Good-Programmers-Make-Bad-Designers|Good programmers make bad designers]]
+# [[2011-08-31-mysql-Optimization-tutorials|mysql 优化教程]] 
+# [[2011-10-16-The-three-sentences-of-a-boss|一个老板的三句话]]
+# [[2011-10-18-vimwiki-Tutorial|Vimwiki 教程]]
