--- a/diary/2011-10-18.wiki
+++ b/diary/2011-10-18.wiki
@@ -5,4 +5,4 @@
 
 == Jquery AJAX 的跨域请求 ==
 今天新的手机站点上线，遇到了一些问题：
-# 无法登陆，登陆使用Jquery AJAX请求，对AJAX的跨域请求方式和请求原理不甚了解，需要整理资料弄明白.
+# 无法登陆，登陆使用Jquery AJAX请求，对AJAX的跨请求方式和请求原理不甚了解，需要整理资料弄明白.
