--- a/index.wiki
+++ b/index.wiki
@@ -1,4 +1,8 @@
 = 海的维基 =
 
-
+github上的项目
+# [http://github.com/sesehai github首页]
+# [http://sesehai.github.com sesehai]
+# [https://github.com/sesehai/EasyFramework EasyFramework]
+# [https://github.com/sesehai/vimwiki vimviki]
 
