--- a/index.wiki
+++ b/index.wiki
@@ -2,7 +2,7 @@
 %title 海的维基
 = 海的维基 =
 
-github上的项目
+== github上的项目 ==
 # [http://github.com/sesehai github首页]
 # [http://sesehai.github.com sesehai]
 # [https://github.com/sesehai/EasyFramework EasyFramework]
