--- a/sites.wiki
+++ b/sites.wiki
@@ -23,6 +23,9 @@
         # [http://linux.vbird.org/  鳥哥的 Linux 私房菜]
         # [http://linux-vbird.bluedata.org/  鸟哥的 Linux 私房菜]
         # [http://www.ee.surrey.ac.uk/Teaching/Unix/ UNIX Tutorial for Beginners]
+        # [http://www.linux.gov.cn/shell/awk.htm Awk学习笔记]
+        # [http://www.grymoire.com/Unix/Sed.html Sed - An Introduction and Tutorial ]
+        # [http://www.grymoire.com/Unix/Awk.html Awk ]
 
 == PHP ==
         # [http://www.php100.com/  PHP100中文网-中国第一档PHP资源分享门户]
