--- a/sites.wiki
+++ b/sites.wiki
@@ -15,6 +15,10 @@
         # [http://hi.baidu.com/thinkinginlamp/home 老王技术手册]
         # [http://huoding.com/ 火丁笔记]
         # [http://www.berlinix.com/index.html 波黎克斯]
+        # [http://mindhacks.cn/ 刘未鹏 | Mind Hacks | 思维改变生活]
+        # [http://blog.rexsong.com/ 千鸟志]
+        # [http://www.jzwalk.com/ 羽中漫步]
+        # [http://u-lis.com/ 游离式]
 == Util Site ==
         # [http://jsfiddle.net/  jsfiddle]
         # [http://adamlu.com/  Hi, I’m Adam Lu.]
