--- a/index.wiki
+++ b/index.wiki
@@ -2,11 +2,27 @@
 %title 海的心情|思考、记录生活变得更丰富！
 
 == Github上的项目 ==
-# [http://github.com/sesehai github首页]
-# [http://sesehai.github.com sesehai]
+# [http://github.com/sesehai 我的github]
+# [http://sesehai.github.com sesehai.gihub.com]
 # [https://github.com/sesehai/EasyFramework EasyFramework]
 # [https://github.com/sesehai/vimwiki vimviki]
 # [https://github.com/dwz-ZendFramework/ dwz-ZendFramework 定制版]
 # [https://github.com/MyWordpress/ MyWordpress 定制版]
 # [https://github.com/myproject/ 如何使用PEAR]
 
+== 程序设计 ==
+# [ PHP]
+# [ Bash]
+# [ Javascript]
+# [ css]
+
+== 数据库 ==
+# [ mysql]
+# [ Memcache]
+# [ Redis]
+# [ MongoDb]
+
+== 服务器 ==
+# [ Linux]
+# [ Nginx]
+# [ Apache]
