--- a/diary/2012-05-13.wiki
+++ b/diary/2012-05-13.wiki
@@ -1,11 +1,11 @@
 %toc
-%title ½ñÌìÖØÐÂÕûÀíÍøÕ¾|º£µÄÐÄÇé
+%title ä»Šå¤©é‡æ–°æ•´ç†ç½‘ç«™|æµ·çš„å¿ƒæƒ…
 
-½ñÌìä¯ÀÀ²©¿Í£¬¿´µ½±ðÈËµÄ²©¿Í½çÃæ¶¼»»ÉÏÁËÐÂµÄÆ¤·ô£¬¸Ð¾õºÜ¿á£»ÍøÕ¾µÄ½á¹¹Ò²ÕûÀíµÄ¾®¾®ÓÐÌõ£¬ÄÚÈÝ·ÖÀàÇåÎú¡£ÔÙ¿´¿´×Ô¼ºÍøÕ¾£¬°¥¡£¡£ÓÐµãÀÏÍÁÁË£¬ÄÚÈÝ»ìÂÒ£¬±¾À´Ð´ÏÂÀ´ÊÇÎªÁË×Ô¼º±ãÓÚ²éÕÒ¡¢±ãÓÚÏµÍ³»¯µÄ£»µ«ÊÇ·¢ÏÖÄÚÈÝÕûÀíµÄÂÒÆß°ËÔãµÄ£»²¢ÇÒºÜ¾ÃÃ»ÓÐÐ´¹ý¶«Î÷£¬ÕûÀí¹ýÖªÊ¶ÁË£¬¶¼¿ìÒª³¤²ÝÁË£¡
+   ä»Šå¤©æµè§ˆåšå®¢ï¼Œçœ‹åˆ°åˆ«äººçš„åšå®¢ç•Œé¢éƒ½æ¢ä¸Šäº†æ–°çš„çš®è‚¤ï¼Œæ„Ÿè§‰å¾ˆé…·ï¼›ç½‘ç«™çš„ç»“æž„ä¹Ÿæ•´ç†çš„äº•äº•æœ‰æ¡ï¼Œå†…å®¹åˆ†ç±»æ¸…æ™°ã€‚å†çœ‹çœ‹è‡ªå·±ç½‘ç«™ï¼Œå“Žã€‚ã€‚æœ‰ç‚¹è€åœŸäº†ï¼Œå†…å®¹æ··ä¹±ï¼Œæœ¬æ¥å†™ä¸‹æ¥æ˜¯ä¸ºäº†è‡ªå·±ä¾¿äºŽæŸ¥æ‰¾ã€ä¾¿äºŽç³»ç»ŸåŒ–çš„ï¼›ä½†æ˜¯å‘çŽ°å†…å®¹æ•´ç†çš„ä¹±ä¸ƒå…«ç³Ÿçš„ï¼›å¹¶ä¸”å¾ˆä¹…æ²¡æœ‰å†™è¿‡ä¸œè¥¿ï¼Œæ•´ç†è¿‡çŸ¥è¯†äº†ï¼Œéƒ½å¿«è¦é•¿è‰äº†ï¼
 
-   ²»¸Ï½ô¶¯ÊÖ¹À¼Æ¾ÍÒª»ÄÎßÁË£¬¿ªÊ¼°Î²Ý£º
-   ÏÈÕûÀíÕ¾µãµÄÆ¤·ô¡¢½á¹¹£»²ÎÕÕÁË¼¸¸ö×Ô¼º¸Ð¾õÊÓ¾õÇåÐÂ£¬½á¹¹¼òµ¥Ã÷ÁËµÄÍøÕ¾£¬ÐÞ¸ÄÁËcssÑùÊ½£¬Ä£°æ½á¹¹£»ËäÈ»¸Ä¶¯²»´ó£¬µ«Ò²ÈÃ×Ô¼ºÕÛÌÚÁËÒ»·¬£»
+   ä¸èµ¶ç´§åŠ¨æ‰‹ä¼°è®¡å°±è¦è’èŠœäº†ï¼Œå¼€å§‹æ‹”è‰ï¼š
+   å…ˆæ•´ç†ç«™ç‚¹çš„çš®è‚¤ã€ç»“æž„ï¼›å‚ç…§äº†å‡ ä¸ªè‡ªå·±æ„Ÿè§‰è§†è§‰æ¸…æ–°ï¼Œç»“æž„ç®€å•æ˜Žäº†çš„ç½‘ç«™ï¼Œä¿®æ”¹äº†cssæ ·å¼ï¼Œæ¨¡ç‰ˆç»“æž„ï¼›è™½ç„¶æ”¹åŠ¨ä¸å¤§ï¼Œä½†ä¹Ÿè®©è‡ªå·±æŠ˜è…¾äº†ä¸€ç•ªï¼›
 
-   ½Ó×Å£¬ÊáÀíÄÚÈÝ·ÖÀà£¬ÔÝÊ±ÄÜÏëµ½µÄÕûÀí³öÀ´£»ÒÔºóÓÖÔö¼ÓÔÙÕûÀí¡£ÕâÑùÕûÀí³öÇåÎúµÄ·ÖÀà£¬ºÃÈ»ÈÃ×Ô¼ºÄÜ¶àË¼¿¼¡¢¶àÕûÀíµãÄÚÈÝ´¦Àí¡£
+   æŽ¥ç€ï¼Œæ¢³ç†å†…å®¹åˆ†ç±»ï¼Œæš‚æ—¶èƒ½æƒ³åˆ°çš„æ•´ç†å‡ºæ¥ï¼›ä»¥åŽåˆå¢žåŠ å†æ•´ç†ã€‚è¿™æ ·æ•´ç†å‡ºæ¸…æ™°çš„åˆ†ç±»ï¼Œå¥½ç„¶è®©è‡ªå·±èƒ½å¤šæ€è€ƒã€å¤šæ•´ç†ç‚¹å†…å®¹å¤„ç†ã€‚
 
-   ÍøÕ¾´óÖÂµ÷ÕûÍê³É£¬Íü×Ô¼ºÄÜ¶àË¼¡¢¶àÐ´£¬¶à½ø²½£¡
+   ç½‘ç«™å¤§è‡´è°ƒæ•´å®Œæˆï¼Œå¿˜è‡ªå·±èƒ½å¤šæ€ã€å¤šå†™ï¼Œå¤šè¿›æ­¥ï¼
