--- a/diary/2012-05-13.wiki
+++ b/diary/2012-05-13.wiki
@@ -1,6 +1,8 @@
 %toc
 %title 今天重新整理网站|海的心情
 
+今天重新整理网站
+
    今天浏览博客，看到别人的博客界面都换上了新的皮肤，感觉很酷；网站的结构也整理的井井有条，内容分类清晰。再看看自己网站，哎。。有点老土了，内容混乱，本来写下来是为了自己便于查找、便于系统化的；但是发现内容整理的乱七八糟的；并且很久没有写过东西，整理过知识了，都快要长草了！
 
    不赶紧动手估计就要荒芜了，开始拔草：
