--- a/article/index.wiki
+++ b/article/index.wiki
@@ -12,6 +12,7 @@
 # [[2011-08-31-mysql-Optimization-tutorials|mysql 优化教程]] 
 
 == 网络摘录 ==
+# [[2012-05-13-summer-prevent-mosquito|【防蚊虫】教你夏天植物驱蚊全攻略]]
 # [[2011-08-15-china-rock-roll-music|中国摇滚音乐]]
 # [[2011-10-16-The-three-sentences-of-a-boss|一个老板的三句话]]
 # [[2011-08-31-Good-Programmers-Make-Bad-Designers|Good programmers make bad designers]]
