--- a/article/2012-05-13-vimwiki-encode.wiki
+++ b/article/2012-05-13-vimwiki-encode.wiki
@@ -16,4 +16,53 @@
 
 以上问题没有找到很好的解决方法，只有一个笨拙的方法：
 
-* 新建页面后，执行":set enc"
+* 新建页面后，执行":set fileencoding=utf-8",":w",就可以解决了。
+
+== 网上总结： ==
+
+=== Vim文件保存编码配置 ===
+
+让Vim能正确显示和保存各种编码文件内容是个头疼的事情，今天专注的把这个问题研究一下
+
+==== 首先是Vim编码配置的三个选项： ====
+
+# encoding(enc):
+
+此项目配置的是vim的默认显示编码，如果你打开的文件编码与该属性配置的编码不同，那么Vim会将编码自动转换到配置编码再显示
+
+# fileencodings(fencs):
+
+此项目配置的是一个编码列表，Vim在读取文件的时候，会根据这里的编码自动检测，如果检测失败则尝试下一个，直到检测成功为止。如果一直没有转换成功，则此值会为空
+
+# fileencoding(fenc):
+
+这个项目配置的是新建文件和保存文件时文件的编码，如果它的值与encoding(enc)不一样，那么保存的时候Vim会自动把文件内容由encoding(enc)的编码转换为fileencoding(fenc)配置编码再保存。而读取文件的时候，该选项的值会自动同步为fileencodings(fencs):配置的有效编码。
+
+==== 举例说明: ====
+
+如果我们配置
+
+encoding(enc):utf-8
+
+fileencodings(fencs):utf-8，cp936
+
+fileencoding(fenc):cp936
+
+那么我们打开一个cp936编码的文件，Vim会将内容转换为utf-8格式来显示，但是保存的时候文件的编码却依然是cp936
+
+如果我的工作环境主要是编辑utf-8，偶尔会修改一下cp936的编码，我们该怎么配置呢？
+
+首先我们可以把fileencoding留空，然后只配置fileencodings(fencs):utf-8，cp936
+
+按照上面的规则，Vim就会自动把文件保存为cp936的编码了
+
+如果我编辑了一个utf-8文件，想把它以cp936的格式保存，该怎么办呢？
+
+在命令行模式输入 :set fenc=cp936 然后保存文件即可，保存之后再输入:set fenc=utf-8就可以继续编辑其他utf-8文件了。
+
+
+
+== 参考 ==
+[[http://be-evil.org/post-158.html]]
+[[http://be-evil.org/post-158.html]]
+
